cal-sip amot and tenure field misaligned issue resolved

--- a/blocks/calculator-sip/calculator-sip.scss
+++ b/blocks/calculator-sip/calculator-sip.scss
@@ -657,7 +657,7 @@
                       // padding-bottom: 4px;
                       display: flex;
                       align-items: center;
-                      height: 35px;
+                      height: 20px;
 
                       @include media(mobile) {
                         text-align: start;
